--- a/theme1.css
+++ b/theme1.css
@@ -10854,23 +10854,23 @@ body:active .root__49fc1 .container_d9c882:not(:active) {
   border-color: var(--main-color);
 }
 
-.card__6faf3 {
+.card_c59071 {
   background-color: var(--card-color-filled);
   border: none;
   padding: 0;
   border-radius: var(--card-radius-big);
   transition: var(--default-time) var(--default-animation) background-color;
 }
-.card__6faf3:hover {
+.card_c59071:hover {
   background-color: var(--card-color-hover);
 }
-.card__6faf3:hover .iconMask__6faf3 {
+.card_c59071:hover .iconMask_c59071 {
   background-color: var(--card-color-hover);
 }
-.card__6faf3 .splashImage__6faf3 {
+.card_c59071 .splashImage_c59071 {
   border-radius: var(--card-radius-big);
 }
-.card__6faf3 .iconMask__6faf3 {
+.card_c59071 .iconMask_c59071 {
   background-color: var(--card-color-filled);
   transition: var(--default-time) var(--default-animation) background-color;
 }
@@ -13419,18 +13419,18 @@ body:active .container__55c99:not(:active) {
   --scrollbar-width: 0;
 }
 
-.soundButton__6d4ed {
+.soundButton__9be63 {
   background-color: var(--card-button-color);
   border-radius: 20px;
   transition: var(--default-time) var(--default-animation) background-color;
 }
-.soundButton__6d4ed.hoverActiveBackground__6d4ed:hover {
+.soundButton__9be63.hoverActiveBackground__9be63:hover {
   background-color: var(--card-button-color-hover);
 }
-.soundButton__6d4ed .buttonOverlayBackground__6d4ed {
+.soundButton__9be63 .buttonOverlayBackground__9be63 {
   background-color: var(--card-button-color);
 }
-.soundButton__6d4ed.soundAddButton__896b6:hover {
+.soundButton__9be63.soundAddButton__896b6:hover {
   background-color: var(--card-button-color-hover);
 }
 
@@ -15866,7 +15866,7 @@ body:active .container_d9c882:not(:active) {
   border: none;
 }
 
-.basicThemeSelectors_fbfab6fbfab6fbfab6 + .premiumFeatureBorder__65c15 {
+.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6 + .premiumFeatureBorder__65c15 {
   margin: 0 -8px -8px;
   border-radius: calc(var(--card-radius-big) - 4px);
 }
@@ -15875,10 +15875,10 @@ body:active .container_d9c882:not(:active) {
   gap: 8px;
 }
 
-.basicThemeSelectors_fbfab6fbfab6fbfab6 {
+.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6 {
   margin-bottom: 0;
 }
-.basicThemeSelectors_fbfab6fbfab6fbfab6 .themeSelectionContainer__36dee {
+.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6 .themeSelectionContainer__36dee {
   width: 84px;
   height: 84px;
   padding: 12px;
