--- a/theme1.css
+++ b/theme1.css
@@ -1,7 +1,7 @@
 /*Inspired by MaterialDiscord theme from CapnKitten#3192*/
 /*Source: https://github.com/CapnKitten/BetterDiscord/tree/master/Themes/Material-Discord */
 
-/* Version 1.6.0 */
+/* Version 1.6.1 */
 
 /*
 *
@@ -396,99 +396,23 @@ body,
  *	APP TITLEBAR
  *
  */
-.typeWindows__421ed.withFrame__421ed {
-  height: var(--app-title-bar-height);
-  margin-top: 0;
-}
-
-.winButton__421ed, .winButton_c38106 {
-  height: var(--app-title-bar-height);
-  top: 0;
-}
-.winButton__421ed:before, .winButton_c38106:before {
-  position: absolute;
-  content: " ";
-  width: 12px;
-  height: 12px;
-  background-position: center;
-  -webkit-mask-size: contain;
-  mask-size: contain;
-  filter: brightness(40%);
-  z-index: 2;
-  opacity: 0;
-  transition: var(--default-time) var(--default-animation) opacity;
-  pointer-events: none;
-}
-.winButton__421ed:hover:before, .winButton_c38106:hover:before {
-  opacity: 1;
-}
-.winButton__421ed:after, .winButton_c38106:after {
-  position: absolute;
-  content: " ";
+ .visual-refresh .winButton__421ed.winButtonMinMax__421ed:nth-of-type(1), .visual-refresh .winButton_c38106.winButtonMinMax__421ed:nth-of-type(1), .visual-refresh .winButton__421ed.winButtonMinMax_c38106:nth-of-type(1), .visual-refresh .winButton_c38106.winButtonMinMax_c38106:nth-of-type(1) {
+  background-color: var(--app-button-min);
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  background-color: var(--app-button-active);
-  transition: var(--default-time) var(--default-animation);
-  pointer-events: none;
 }
-.winButton__421ed:active:after, .winButton_c38106:active:after {
-  opacity: 0.65;
-}
-/*
-.winButton__421ed.winButtonMinMax__421ed:nth-last-of-type(2):hover:after, .winButton_c38106.winButtonMinMax__421ed:nth-last-of-type(2):hover:after, .winButton__421ed.winButtonMinMax_c38106:nth-last-of-type(2):hover:after, .winButton_c38106.winButtonMinMax_c38106:nth-last-of-type(2):hover:after {
+.visual-refresh .winButton__421ed.winButtonMinMax__421ed:nth-of-type(2), .visual-refresh .winButton_c38106.winButtonMinMax__421ed:nth-of-type(2), .visual-refresh .winButton__421ed.winButtonMinMax_c38106:nth-of-type(2), .visual-refresh .winButton_c38106.winButtonMinMax_c38106:nth-of-type(2){
   background-color: var(--app-button-max);
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
 }
-*/
-.winButton__421ed.winButtonMinMax__421ed:nth-last-of-type(2):before, .winButton_c38106.winButtonMinMax__421ed:nth-last-of-type(2):before, .winButton__421ed.winButtonMinMax_c38106:nth-last-of-type(2):before, .winButton_c38106.winButtonMinMax_c38106:nth-last-of-type(2):before {
-  -webkit-mask-image: url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/files/icons/outline/window_maximize.svg);
-  -webkit-mask-repeat: no-repeat;
-  background-color: var(--app-button-max);
-}
-/*
-.winButton__421ed.winButtonMinMax__421ed:nth-last-of-type(1):hover:after, .winButton_c38106.winButtonMinMax__421ed:nth-last-of-type(1):hover:after, .winButton__421ed.winButtonMinMax_c38106:nth-last-of-type(1):hover:after, .winButton_c38106.winButtonMinMax_c38106:nth-last-of-type(1):hover:after {
-  background-color: var(--app-button-min);
-}
-*/
-.winButton__421ed.winButtonMinMax__421ed:nth-last-of-type(1):before, .winButton_c38106.winButtonMinMax__421ed:nth-last-of-type(1):before, .winButton__421ed.winButtonMinMax_c38106:nth-last-of-type(1):before, .winButton_c38106.winButtonMinMax_c38106:nth-last-of-type(1):before {
-  -webkit-mask-image: url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/files/icons/outline/window_minimize.svg);
-  -webkit-mask-repeat: no-repeat;
-  background-color: var(--app-button-min);
-}
-/*
-.winButton__421ed.winButtonClose__421ed:hover:after, .winButton_c38106.winButtonClose__421ed:hover:after, .winButton__421ed.winButtonClose_c38106:hover:after, .winButton_c38106.winButtonClose_c38106:hover:after {
+.winButton__421ed.winButtonClose__421ed, .winButton_c38106.winButtonClose__421ed, .winButton__421ed.winButtonClose_c38106, .winButton_c38106.winButtonClose_c38106 {
   background-color: var(--app-button-close);
-}
-*/
-.winButton__421ed.winButtonClose__421ed:before, .winButton_c38106.winButtonClose__421ed:before, .winButton__421ed.winButtonClose_c38106:before, .winButton_c38106.winButtonClose_c38106:before {
-  -webkit-mask-image: url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/files/icons/outline/window_close.svg);
-  -webkit-mask-repeat: no-repeat;
-  background-color: var(--app-button-close);
-}
-.winButton__421ed:hover, .winButton_c38106:hover, .winButton__421ed:active, .winButton_c38106:active {
-  background-color: transparent;
-}
-.winButton__421ed svg, .winButton_c38106 svg {
-  display: none;
-}
-
-[class^='winButtonClose']::after {
-  background-color: var(--app-button-close) !important;
-
-}
-[class^='winButtonMinMax']:nth-child(3)::after {
-  background-color: var(--app-button-max) !important;
-
-}
-[class^='winButtonMinMax']:nth-child(4)::after {
-  background-color: var(--app-button-min) !important;
-}
-
-html:not(.app-focused) .winButton__421ed:after, html:not(.app-focused) .winButton_c38106:after {
-  background-color: var(--app-button-inactive);
-}
-html:not(.app-focused) .winButton__421ed.winButtonMinMax__421ed:after, html:not(.app-focused) .winButton_c38106.winButtonMinMax__421ed:after, html:not(.app-focused) .winButton__421ed.winButtonMinMax_c38106:after, html:not(.app-focused) .winButton_c38106.winButtonMinMax_c38106:after {
-  background-color: var(--app-button-inactive);
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
 }
 
 /*
@@ -14545,6 +14469,38 @@ body:active .container_d9c882:not(:active) {
   color: var(--alert-text-color);
 }
 
+/* SERVER LIST ->  Better Server List */
+.bar_c38106{
+  z-index: 28371983721897;
+}
+.title_c38106{
+  background-color: transparent;
+  background: linear-gradient(to bottom, var(--background-base-lowest), #00000000);
+}
+.title_a7d72e{
+  -webkit-app-region: drag;
+}
+
+.sidebar_c48ade{
+  overflow: visible !important;
+  position: relative;
+}
+
+.sidebarList_c48ade{
+  margin-left: 72px;
+}
+
+.wrapper_ef3116{
+  position: absolute;
+  top: -35px;
+  height: calc(100vh - 65px);
+  /* padding-top: 10px; */
+}
+
+[class^="stack_dbd263 scroller_ef3116"]{
+  padding-top: 40px !important;
+}
+
 /* SERVER LIST -> SERVER */
 .listItem__650eb .wrapper_cc5dd2 {
   border-radius: var(--avatar-radius);
@@ -18491,26 +18447,6 @@ body:active .container_d9c882:not(:active) {
 }
 .visual-refresh .bar_c38106 .iconBadge__9293f {
   box-shadow: 0 0 0 4px var(--main-alt);
-}
-.visual-refresh .winButton__421ed, .visual-refresh .winButton_c38106 {
-  --app-title-bar-height: var(--custom-app-top-bar-height);
-  width: calc(var(--app-title-bar-height) / 1.325);
-}
-.visual-refresh .winButton__421ed.winButtonMinMax__421ed:nth-of-type(1):hover:after, .visual-refresh .winButton_c38106.winButtonMinMax__421ed:nth-of-type(1):hover:after, .visual-refresh .winButton__421ed.winButtonMinMax_c38106:nth-of-type(1):hover:after, .visual-refresh .winButton_c38106.winButtonMinMax_c38106:nth-of-type(1):hover:after {
-  background-color: var(--app-button-min);
-}
-.visual-refresh .winButton__421ed.winButtonMinMax__421ed:nth-of-type(1):before, .visual-refresh .winButton_c38106.winButtonMinMax__421ed:nth-of-type(1):before, .visual-refresh .winButton__421ed.winButtonMinMax_c38106:nth-of-type(1):before, .visual-refresh .winButton_c38106.winButtonMinMax_c38106:nth-of-type(1):before {
-  -webkit-mask-image: url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/files/icons/outline/window_minimize.svg);
-  -webkit-mask-repeat: no-repeat;
-  background-color: var(--app-button-min);
-}
-.visual-refresh .winButton__421ed.winButtonMinMax__421ed:nth-of-type(2):hover:after, .visual-refresh .winButton_c38106.winButtonMinMax__421ed:nth-of-type(2):hover:after, .visual-refresh .winButton__421ed.winButtonMinMax_c38106:nth-of-type(2):hover:after, .visual-refresh .winButton_c38106.winButtonMinMax_c38106:nth-of-type(2):hover:after {
-  background-color: var(--app-button-max);
-}
-.visual-refresh .winButton__421ed.winButtonMinMax__421ed:nth-of-type(2):before, .visual-refresh .winButton_c38106.winButtonMinMax__421ed:nth-of-type(2):before, .visual-refresh .winButton__421ed.winButtonMinMax_c38106:nth-of-type(2):before, .visual-refresh .winButton_c38106.winButtonMinMax_c38106:nth-of-type(2):before {
-  -webkit-mask-image: url(https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/files/icons/outline/window_maximize.svg);
-  -webkit-mask-repeat: no-repeat;
-  background-color: var(--app-button-max);
 }
 .visual-refresh .container__133bf {
   border-top: none;
