--- a/theme1.css
+++ b/theme1.css
@@ -1,7 +1,7 @@
 /*Inspired by MaterialDiscord theme from CapnKitten#3192*/
 /*Source: https://github.com/CapnKitten/BetterDiscord/tree/master/Themes/Material-Discord */
 
-/* Version 1.6.5 */
+/* Version 1.6.6 */
 
 /*
 *
@@ -9600,27 +9600,27 @@ body:active .root__49fc1 .container_d9c882:not(:active) {
   border-radius: 0;
 }
 
-.profileEntryCard__06137 {
+.profileEntryCard__655fa {
   background-color: var(--card-color-filled);
   border-radius: 4px;
   border-bottom: 0;
   transition: var(--default-time) var(--default-animation) background-color;
 }
-.profileEntryCard__06137:hover {
+.profileEntryCard__655fa:hover {
   background-color: var(--card-color-hover);
 }
-.profileEntryCard__06137:first-of-type {
+.profileEntryCard__655fa:first-of-type {
   border-top-left-radius: var(--card-radius-big);
   border-top-right-radius: var(--card-radius-big);
 }
-.profileEntryCard__06137:last-of-type {
+.profileEntryCard__655fa:last-of-type {
   border-bottom-left-radius: var(--card-radius-big);
   border-bottom-right-radius: var(--card-radius-big);
 }
-.profileEntryCard__06137:only-child {
+.profileEntryCard__655fa:only-child {
   border-radius: var(--card-radius-big);
 }
-.profileEntryCard__06137:not(:last-of-type) {
+.profileEntryCard__655fa:not(:last-of-type) {
   margin-bottom: 2px;
 }
 
@@ -10014,13 +10014,13 @@ body:active .root__49fc1 .container_d9c882:not(:active) {
   border-radius: var(--card-radius-big);
 }
 
-.table__58ce9 {
+.table_fda3e4 {
   background-color: var(--card-color-filled);
   border: none;
   padding: 16px;
   border-radius: var(--card-radius-big);
 }
-.table__58ce9 .divider__58ce9 {
+.table_fda3e4 .divider_fda3e4 {
   background-color: var(--card-border-color);
 }
 
@@ -16284,7 +16284,7 @@ body:active .container_d9c882:not(:active) {
   border: none;
 }
 
-.basicThemeSelectors_fbfab6fbfab6 + .premiumFeatureBorder__65c15 {
+.basicThemeSelectors_fbfab6fbfab6fbfab6 + .premiumFeatureBorder__65c15 {
   margin: 0 -8px -8px;
   border-radius: calc(var(--card-radius-big) - 4px);
 }
@@ -16293,17 +16293,17 @@ body:active .container_d9c882:not(:active) {
   gap: 8px;
 }
 
-.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6fbfab6 {
+.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6fbfab6fbfab6 {
   margin-bottom: 16px;
 }
-.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6fbfab6 .themeSelectionContainer__36dee {
+.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6fbfab6fbfab6 .themeSelectionContainer__36dee {
   width: 84px;
   height: 84px;
   padding: 12px;
   background-color: var(--main-color);
   border-radius: var(--card-radius-big);
 }
-.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6fbfab6 + .premiumFeatureBorder__65c15 {
+.basicThemeSelectors_fbfab6fbfab6fbfab6fbfab6fbfab6fbfab6 + .premiumFeatureBorder__65c15 {
   margin: 0 -8px -8px;
   background: linear-gradient(var(--card-color-filled), var(--card-color-filled)) padding-box, linear-gradient(45deg, hsl(269, calc(var(--saturation-factor, 1) * 52.7%), 52.7%), hsl(325, calc(var(--saturation-factor, 1) * 31.7%), 51.8%)) border-box;
   border-radius: calc(var(--card-radius-big) - 4px);
