--- a/nitroaddon.css
+++ b/nitroaddon.css
@@ -180,18 +180,13 @@
 .theme-dark .activityPanel_c48ade,
 .theme-dark .listeningAlong_e0cf27,
 .theme-dark .container_6sXIoE,
-.theme-dark #vc-spotify-player,
 .theme-light .container_e131a9,
 .theme-light .activityPanel_c48ade,
 .theme-light .listeningAlong_e0cf27,
-.theme-light .container_6sXIoE,
-.theme-light #vc-spotify-player {
-  background: var(--bg-overlay-3, var(--background-tertiary)) !important;
+.theme-light .container_6sXIoE {
+  background: var(--bg-overlay-floating, var(--background-base-low, var(--background-secondary-alt))) !important;
 }
-.theme-dark .container__37e49,
-.theme-light .container__37e49 {
-  background: var(--bg-overlay-3, var(--background-tertiary)) !important;
-}
+
 .theme-dark .chat_f75fb0,
 .theme-dark .chatContent_f75fb0,
 .theme-light .chat_f75fb0,
@@ -398,7 +393,7 @@
 #vc-spotify-player .vc-spotify-pause {
   background: var(--bg-overlay-5);
 }
-#vc-spotify-button:hover {
+.vc-spotify-button:hover {
   background: var(--bg-overlay-5);
 }
 
