--- a/theme1.css
+++ b/theme1.css
@@ -1,7 +1,7 @@
 /*Inspired by MaterialDiscord theme from CapnKitten#3192*/
 /*Source: https://github.com/CapnKitten/BetterDiscord/tree/master/Themes/Material-Discord */
 
-/* Version 1.6.7 */
+/* Version 1.6.8 */
 
 /*
 *
@@ -3146,7 +3146,9 @@ nav.guilds_c48ade {
 #vc-spotify-progress-bar {
   margin: 8px 0 !important;
 }
-
+.visual-refresh #vc-spotify-progress-bar>[class^=slider] [class^=grabber] {
+  margin-top: -13px;
+}
 .vc-spotify-shuffle path {
   d: path("M14.83,13.41L13.42,14.82L16.55,17.95L14.5,20H20V14.5L17.96,16.54L14.83,13.41M14.5,4L16.54,6.04L4,18.59L5.41,20L17.96,7.46L20,9.5V4M10.59,9.17L5.41,4L4,5.41L9.17,10.58L10.59,9.17Z");
 }
