--- a/theme1.css
+++ b/theme1.css
@@ -13258,6 +13258,9 @@ body:active .container__3dde2:not(:active) {
   border-radius: 50%;
   animation: spin 6s linear infinite;
 }
+.assetsLargeImage__2ef49 {
+    border-radius: 50%;
+}
 
 /*
  *
